crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_attr_reserved_names_html.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<label for=\"x\" style=\"color: red\">Name</label>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 47,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                    value: Tag(
                        "label",
                    ),
                },
                attrs: [
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            value: "for",
                        },
                        value: Some(
                            Str(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 15,
                                        },
                                    },
                                    value: "x",
                                },
                            ),
                        ),
                    },
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                            value: "style",
                        },
                        value: Some(
                            Str(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 22,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 34,
                                        },
                                    },
                                    value: "color: red",
                                },
                            ),
                        ),
                    },
                ],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 35,
                            },
                            end: Position {
                                line: 1,
                                column: 39,
                            },
                        },
                        value: Text(
                            "Name",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
