crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_attr_string.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<a href=\"/home\">home</a>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 25,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "a",
                    ),
                },
                attrs: [
                    Attr {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 4,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                            value: "href",
                        },
                        value: Some(
                            Str(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 16,
                                        },
                                    },
                                    value: "/home",
                                },
                            ),
                        ),
                    },
                ],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 17,
                            },
                            end: Position {
                                line: 1,
                                column: 21,
                            },
                        },
                        value: Text(
                            "home",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
