crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__element_component.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<Spinner />"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Component(
                        Path {
                            segments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 2,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 9,
                                        },
                                    },
                                    value: "Spinner",
                                },
                            ],
                        },
                    ),
                },
                attrs: [],
                children: [],
                self_closing: true,
            },
        ),
    ),
}
